# FocusedEditor

./: .gitignore  CMakeLists.txt  README.md  code_highlighter.cpp  code_highlighter.h  custom_editor.cpp  custom_editor.h  editor_window.cpp  editor_window.h  hello.cpp  indent_manager.cpp  indent_manager.h  line_number_area.cpp  line_number_area.h  main.cpp  preferences_dialog.cpp  preferences_dialog.h
